feat(subject/recordedClass/material): created new entities
