# ec_backend/src/entities/Material.ts
@@ -1,0 +1,9 @@
+import { MaterialTypes } from '@prisma/client';
+
+export default interface Material {
+  id?: string;
+  title: string;
+  type: MaterialTypes;
+  subjectId: number;
+  url: string;
+}
