# ec_backend/src/entities/RecordedClass.ts
@@ -1,0 +1,7 @@
+export default interface RecordedClass {
+  id?: string;
+  title: string;
+  recordedAt: Date;
+  subjectId: number;
+  url: string;
+}
